--- a/stylesheets/body-structure.css
+++ b/stylesheets/body-structure.css
@@ -1,7 +1,8 @@
 :root{
     font-size: 62.5%;
 
-    --sidebar-width: 8rem;
+    --aside-nav-padding-inline: 1rem;
+    --sidebar-width: calc(8rem + var(--aside-nav-padding-inline));
 
     --sidebar-colour: rgb(0, 120, 212);
     --main-background-colour: white;
@@ -13,20 +14,6 @@ body{
     --body-structure-rows: auto 
                            minmax(50rem, 1fr);
 }
-
-/* So we want aside nav to have gaps between all sections that increase
-always with screen height, and at a certain screen height reach around 2rem
-and stop decreasing there. ANSWER: GAPS are min(screen height dvh, rem)!!! 
-If possible we then want the gaps between items to shrink for a little bit
-with the screen height and then after that stop. 
-ANSWER: A very clever calc(minrem, screen height, maxrem) whereby our 
-maxrem picks up off the minrem on the above "ANSWER" and uses the same dvh
-unit to pick up immediately
-Finally we want the items to shrink to a certain size and then stop
-finally causing an overflow. ANSWER: Another calc() 
-NOTE: If possible to move them one after another then please figure that
-out but please also see about moving all at the same time and what
-the differences in the two approaches are.  */
 
 *,
 *::after,
@@ -50,10 +37,9 @@ html, body{
                          ". main";
 }
 
-/* GENERAL STYLING ***START*** */
+ /* GENERAL STYLING ***START***  */
 
 svg{
-    height: 100%;
     fill: white;
     display: block;
 }
@@ -62,7 +48,7 @@ input[type="checkbox"]{
     display: none;
 }
 
-/* GENERAL STYLING ***END*** */
+ /* GENERAL STYLING ***END***  */
 
 header{
     background-color: whitesmoke;
